[ADD] JOIN功能测试完成，待优化